--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,11 @@
 ---
 import Navigation from "./Navigation.astro"
 import Hamburger from "../components/Hamburger.astro"
+import ThemeIcon from "./ThemeIcon.astro"
 ---
 
 <header>
   <Hamburger />
+  <ThemeIcon />
   <Navigation />
 </header>
